fixed some spacing issues on index and changed about image text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,21 @@
     padding: 2% auto 0 auto;
 }
 
+.titleSpan1 {
+    color: black;
+    /* text-align: center;
+    font-size: 800%;
+    margin: 0;
+    padding: 2% auto 0 auto; */
+    /* text-shadow: 2px 2px 4px #000000; */
+
+}
+
+.titleSpan1:hover {
+    color: rgb(145, 253, 21);
+    text-decoration: none;
+}
+
 .titleSpan {
     color: black;
     text-align: center;
@@ -23,14 +38,22 @@
     /* text-shadow: 2px 2px 4px #000000; */
 
 }
-
 .titleSpan:hover {
     color: rgb(145, 253, 21);
     text-decoration: none;
 }
 
+
 .titleHover {
     text-decoration: none;
+}
+
+.whiteTitle {
+    color: rgb(255, 255, 255);
+    text-align: center;
+    font-size: 800%;
+    margin: 0;
+    padding: 2% auto 0 auto;
 }
 
 a:hover {
@@ -42,6 +65,8 @@ text-decoration: none;
     text-decoration: none;
     background-color: none;
     border: none;
+    padding: 0;
+    margin: 0;
 }
 
 .E_magic:hover {
@@ -62,6 +87,7 @@ text-decoration: none;
 .meCartoon {
     display: block;
     margin: 0 auto;
+    width: 100%;
     
 }
 .aboutTextHover {
